# Civit-Comfy-Integration

./: .gitignore  Cargo.toml  ComfyUIFEExampleVueBasic.py  __init__.py  justfile  manage_deps.py  package-lock.json  server.py  tsconfig.json
.github/workflows/: CI.yml
ComfyUI_frontend_vue_basic/: __init__.py  manage_deps.py  package.json  requirements.txt
ComfyUI_frontend_vue_basic/src/components/: CivitMenu.html
app/: Cargo.toml
app/src/: main.rs  media_proxy.rs
app/src/api/: favorite_media.rs  get_collection_with_media.rs  get_collections.rs  mod.rs  visualizer_data.rs
backend/: Cargo.toml
backend/app/: Cargo.toml
backend/app/src/: lib.rs  media_proxy.rs
backend/app/src/api/: create_collection.rs  favorite_media.rs  get_base_model_list.rs  get_collection_with_media.rs  get_collections.rs  get_generation_data.rs  get_model.rs  get_models.rs  get_techniques.rs  get_tools.rs  mansonary.rs  mod.rs  tags.rs  update_collections.rs  user.rs
backend/app/src/downloader/: download_by_id.rs  mod.rs  worker.rs
backend/civit/: Cargo.toml
backend/civit/src/: lib.rs
backend/civit/src/api/: ___  generation_data.rs  image_infinite.rs  mod.rs  model_infinite.rs  models.rs  technique_list.rs  tool_list.rs
backend/civit/src/api/collections/: create.rs  get_collection_with_item.rs  mod.rs  save_item_by_id.rs
backend/civit/src/api/user/: mod.rs
backend/civitComfyBindings/: Cargo.toml  pyproject.toml
backend/civitComfyBindings/.github/workflows/: CI.yml
backend/civitComfyBindings/src/: lib.rs
backend/rust_dev_server/: Cargo.toml
backend/rust_dev_server/src/: main.rs
backend/test_python_server/: main.py
backend/test_python_server/src/: manage_deps.py
civit/: Cargo.toml
civit/src/: lib.rs
civit/src/api/: creator.rs  download.rs  generation_data.rs  image_infinite.rs  images.rs  mod.rs  tags.rs  tags_id.rs
civit/src/api/collections/: create.rs  get_collection_with_item.rs  save_item_by_id.rs
civit/src/api/user/: collections.rs  mod.rs
civit/src/filters/: mod.rs
civitComfyBindings/: Cargo.toml  pyproject.toml
civitComfyBindings/src/: lib.rs
front-end/: package-lock.json  package.json  svelte.config.js
front-end/src/: app.html
front-end/src - Cópia/lib/: state.svelte.ts
front-end/src - Cópia/lib/api/: filterManager.ts  imageGallery.ts
front-end/src - Cópia/lib/components/: button.svelte  header.svelte  spinner.svelte  visualizerContros.svelte
front-end/src - Cópia/lib/composables/: collectionSavePopup.svelte  mansonaryGallery.svelte  mediaVisualizer.svelte
front-end/src - Cópia/lib/data/: base_model_descriptions.ts
front-end/src - Cópia/routes/: +layout.svelte
front-end/src/lib/: AssetsUtils.ts  api.ts  filter.ts  filterManager.ts  imageGallery.ts  state.svelte.ts
front-end/src/lib/api/: imageGallery.ts
front-end/src/lib/apis/: images.svelte.ts  model_data.ts  models.svelte.ts
front-end/src/lib/components/: button.svelte  header.svelte  login.svelte  spinner.svelte  visualizerContros.svelte
front-end/src/lib/composables/: asset.svelte  asset_mansonary.svelte  collectionSavePopup.svelte  collections_manager.svelte  mansonaryGallery.svelte  mediaVisualizer.svelte  model.svelte  models_mansonary.svelte
front-end/src/lib/data/: base_models.ts  techniques.ts
front-end/src/lib/filters/: advanced_filters.svelte  (+5 more)
front-end/src/routes/: +layout.svelte  +page.svelte  layout.css  theme.css
js/: main.js
src/: main.rs  main.ts
src/api/: download.rs  mod.rs  models.rs  tags.rs
(+29 files in other folders)
