[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
civit = { path = "../civit" }
http = "1.4.0"
hyper = "1.8.1"
hyper-tls = "0.6.0"
rand = "0.9.2"
reqwest = "0.12.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "fs"] }
