[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.43", features = ["serde"] }
civit = { path = "../civit" }
futures = "0.3.31"
http-body-util = "0.1.3"
notify = "8.2.0"
rand = "0.9.2"
reqwest = { version = "0.12.25", features = ["brotli", "cookies", "deflate", "gzip", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "fs"] }
user_dirs = "0.2.0"
