[package]
name = "rust_civit_comfy_bindings"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_civit_comfy_bindings"
crate-type = ["cdylib"]

[dependencies]
app = {path="../app"}

pyo3 = "0.27.0"
axum = "0.8.7"
civit = { path = "../civit" }
rand = "0.9.2"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = [] }